link al blog y como lanzar el demo