@@ -1,2 +1,8 @@
 # records-preview-j14
 usando records en jdk 14 preview
+
+[Entrada del blog](https://javasofias.blogspot.com/2019/12/records-preview-en-jdk-14-ea.html)
+
+### Compilar y lanzar:
+export MAVEN_OPTS=--enable-preview
+mvn compile exec:java
